--- a/package.json
+++ b/package.json
@@ -4,9 +4,13 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
+    "an-array-of-english-words": "^2.0.0",
+    "firebase": "^9.17.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
+    "uuid": "^9.0.0",
     "web-vitals": "^3.0.4"
   },
   "scripts": {
